changed get params
